--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -586,6 +586,7 @@
 		    });
 			
 		    parseAndPlotMarkers();
+			addlocals();
 		}
 		
 		// add locals
@@ -599,6 +600,14 @@
 			                var marker = new google.maps.Marker({
 								position: location,
 								map: map,
+								icon: {
+								        path: google.maps.SymbolPath.BACKWARD_OPEN_ARROW,
+								        fillColor: 'blue',
+								        fillOpacity: 1,
+								        strokeColor: 'blue',
+								        strokeWeight: 1,
+								        scale: 8
+								    },
 								title: data['local']
 			                });
 							
@@ -616,8 +625,6 @@
 			        });
 		    });
 		}
-		
-		addUnionHallMarkers();
 		
 		// put markers in
 		function parseAndPlotMarkers() {
