--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -608,13 +608,13 @@
 							        fillOpacity: 1,
 							        strokeColor: 'blue',
 							        strokeWeight: 1,
-							        scale: 8
+									scale: 5
 							    },
 								title: entry.local
 		                });
 						
 						var infowindow = new google.maps.InfoWindow({
-							content: entry.local
+							content: "Local " + entry.local
 						});
 						
 						marker.addListener('click', function() {
