--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<div>🎶 <a href="jmix/index.html">jmix</a></div>
 	
-	<div>⬅️⬆️ <a href="jmix/index.html">ddr selection screen</a></div>
+	<div>⬅️⬆️ <a href="ddr/ddr.html">ddr selection screen</a></div>
 	
 </body>
 </html>
