I somehow deleted the freakin locals thank god for github

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -1229,7 +1229,42 @@
 			"type": ["Fin Com"],
 			"local": "661"
 			}
-		    ];
+		];
+			
+		const locals = [
+	        {
+				"local": "213",
+				"address": "1200 Corporate Center Drive, 3rd Floor, Monterey Park, CA 91754"
+			},
+	        {
+				"local": "323",
+				"address": "1010 Sandhill Ave, Carson, CA 90746"
+			},
+	        {
+				"local": "562",
+				"address": "341 East Wardlow Road, Long Beach, CA 90807"
+			},
+	        {
+				"local": "661",
+				"address": "15881 Valley View Court, Sylmar, CA 91342"
+			},
+	        {
+				"local": "714",
+				"address": "7111 Firestone Boulevard, #122, Buena Park, CA 90621"
+			},
+			{
+				"local": "909",
+				"address": "3250 East Shelby Street, Ontario, CA 91764"
+			},
+	        {
+				"local": "721",
+				"address": "10015 Rose Hills Road, #100, Whittier, CA 90601"
+			},
+	        {
+				"local": "743",
+				"address": "911 20th Street, 911 20th Street, Bakersfield, CA, USA, Bakersfield, CA 93301"
+			},
+		];
 		
 		console.log(mapdata.length + " sites");
 			
