added a ding dong semicolon that broke everything I guess

--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -1313,7 +1313,7 @@
 		                });
 						
 						var infowindow = new google.maps.InfoWindow({
-							content: "Local " + entry.local + " " + entry.flowcode;
+							content: "Local " + entry.local + " " + entry.flowcode
 						});
 						
 						marker.addListener('click', function() {
